# sumisid

./: .gitignore  README.md  Taskfile.yaml
client/react/sumisid-client/: package-lock.json  package.json
flutter.old/sumisid_client/: README.md
flutter.old/sumisid_client/lib/: main.dart
flutter.old/sumisid_client/test/: widget_test.dart
flutter.old/sumisid_client/web/: index.html
flutter.old/sumisid_client/windows/: CMakeLists.txt
flutter/sumisid_client/: pubspec.yaml
flutter/sumisid_client/lib/: main.dart
flutter/sumisid_client/test/: widget_test.dart
flutter/sumisid_client/web/: manifest.json
go/: Taskfile.yaml  docker-compose.yaml  go.mod  go.sum
go/cmd/: main.go
go/cmd/server/: main.go
go/internal/database/: club.go  db.go  diveclub.go  migrate.go  person.go
go/internal/diveclub/: diveclub.go
go/internal/services/: club.go  diveclub.go  person.go
go/migrations/: 0001_create_clubs.down.sql  0001_create_clubs.up.sql  0001_create_diveclub.down.sql  0001_create_diveclub.up.sql  0001_initial.up.sql
go/pkg/handlers/: dive_club.go  person.go  status_handlers.go
go/pkg/mocks/: dive_club_members.go  dive_clubs.go  people.go
go/views/: index.html
rust/sumisidserver/: .env  Cargo.toml  configuration.yaml
rust/sumisidserver/.cargo/: config.toml
rust/sumisidserver/migrations/: 20220427_2300_clubs_and_people.sql
rust/sumisidserver/scripts/: init_db.sh
rust/sumisidserver/src/: configuration.rs  main.rs  startup.rs
rust/sumisidserver/src/routes/: clubs.rs  mod.rs  ping.rs
rust/sumisidserver/tests/: health_check.rs
(+27 files in other folders)
